# pisense

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  config.ini  deploy.sh
.zed/: settings.json
cmake/: aarch64-linux-gnu.toolchain.cmake
include/: ini_manager.hpp
scripts/: ci.sh
src/: config.hpp  i2c.hpp  main.cpp  pisense.hpp  sense_hat.hpp  timer.hpp
src/components/: hts221.hpp  lps25h.hpp  lps25hb.hpp  lsm9ds1.hpp
